Bug 840431 - Cache an ellipsis textrun on gfxFontGroup. r=roc, a=tef+