layout/generic/TextOverflow.h
@@ -11,7 +11,9 @@
 #include "nsLineBox.h"
 #include "nsStyleStruct.h"
 #include "nsTHashtable.h"
+
 class nsIScrollableFrame;
+class gfxTextRun;
 
 namespace mozilla {
 namespace css {
@@ -215,10 +217,8 @@ class TextOverflow {
 
     // The current width of the marker, the range is [0 .. mIntrinsicWidth].
     nscoord                        mWidth;
-    // The intrinsic width of the marker string.
+    // The intrinsic width of the marker.
     nscoord                        mIntrinsicWidth;
-    // The marker text.
-    nsString                       mMarkerString;
     // The style for this side.
     const nsStyleTextOverflowSide* mStyle;
     // True if there is visible overflowing inline content on this side.
